# crabby-search

./: .gitignore  README.md  concepts.md  design-doc.md  release.sh  run-web.sh  stop-web.sh
engine/: Cargo.toml
engine/src/: main.rs
engine/src/api/: dto.rs  handlers.rs  mod.rs  state.rs
engine/src/engine/: document.rs  engine.rs  index.rs  mod.rs  search.rs  store.rs  tokenizer.rs
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: api.ts  extract.ts  main.tsx  pdf.ts  router.tsx  styles.css
web/src/routes/: DocumentPage.tsx  IndexPage.tsx  SearchPage.tsx  UploadPage.tsx
