[package]
name = "crabby-search"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[dependencies]
actix-web = "4.13"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "crabby-search"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
